manifests/vgpu.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: volcano-device-plugin
  namespace: volcano-system
spec:
  selector:
    matchLabels:
      name: volcano-device-plugin
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ""
      labels:
        name: volcano-device-plugin
    spec:
      tolerations:
      - key: CriticalAddonsOnly
        operator: Exists
      - key: volcano.sh/gpu-memory
        operator: Exists
        effect: NoSchedule
      priorityClassName: "system-node-critical"
      serviceAccount: volcano-device-plugin
      containers:
      - image: registry.cn-beijing.aliyuncs.com/kubegems/volcano-vgpu-device-plugin:v1.11.1
        args: ["--device-split-count=10","--gpu-memory-factor=128"]
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "cp -f /k8s-vgpu/lib/nvidia/* /usr/local/vgpu/"]
        name: volcano-device-plugin
        securityContext:
          allowPrivilegeEscalation: true
          privileged: true
          capabilities:
            drop: ["ALL"]
            add: ["SYS_ADMIN"]
        volumeMounts:
        - name: deviceconfig
          mountPath: /config
        - name: device-plugin
          mountPath: /var/lib/kubelet/device-plugins
        - name: lib
          mountPath: /usr/local/vgpu
        - name: hosttmp
          mountPath: /tmp
      - image: registry.cn-beijing.aliyuncs.com/kubegems/volcano-vgpu-device-plugin:v1.11.1
        name: monitor
        command:
        - /bin/bash
        - -c
        - volcano-vgpu-monitor
        ports:
        - containerPort: 9394
          name: metrics
          protocol: TCP
        securityContext:
          privileged: true
          allowPrivilegeEscalation: true
          capabilities:
            drop: ["ALL"]
            add: ["SYS_ADMIN"]
        volumeMounts:
        - name: dockers
          mountPath: /run/docker
        - name: containerds
          mountPath: /run/containerd
        - name: sysinfo
          mountPath: /sysinfo
        - name: hostvar
          mountPath: /hostvar
        - name: hosttmp
          mountPath: /tmp
      volumes:
      - name: deviceconfig
        configMap:
          name: volcano-vgpu-node-config
      - hostPath:
          path: /var/lib/kubelet/device-plugins
          type: Directory
        name: device-plugin
      - hostPath:
          path: /usr/local/vgpu
          type: DirectoryOrCreate
        name: lib
      - name: hosttmp
        hostPath:
          path: /tmp
          type: DirectoryOrCreate
      - name: dockers
        hostPath:
          path: /run/docker
          type: DirectoryOrCreate
      - name: containerds
        hostPath:
          path: /run/containerd
          type: DirectoryOrCreate
      - name: usrbin
        hostPath:
          path: /usr/bin
          type: Directory
      - name: sysinfo
        hostPath:
          path: /sys
          type: Directory
      - name: hostvar
        hostPath:
          path: /var
          type: Directory
